--- a/lojas.html
+++ b/lojas.html
@@ -6,15 +6,15 @@
     <title>Verifique Aqui</title>
 </head>
 <body>
-    <nav>
-        <a href="index.html">
+    <nav> <!-- Parte superior: indica o nome do app e a seta para voltar para a página anterior-->
+        <a href="index.html"> <!--volta para a pagina inicial (verificar o index.html)-->
             <img src = "image/seta-esquerda.png" alt = "seta esquerda">
             <p>Voltar</p>
         </a>
-        <h1>Verifique Aqui</h1>
+        <h2>Verifique Aqui</h2>
     </nav>
     <main>
-        <h1>Lojas da Semana</h1>
+        <h2>Lojas da Semana</h2>
             <ul>
                 <li><a href = "https://www.amazon.com.br" target="_blank">
                     <img src="image/amazon_logo.png" alt = "Amazon">
@@ -35,7 +35,7 @@
                 </li>
             </ul>
     </main>
-    <footer>
+    <footer> <!-- Rótulo final da página, como um sub menu-->
         <a href="verificador_chamadas.html"> <img src="image/telefone.png" alt="telefone"></a>
         <a href="verificador.html"> <img src="image/lupa.png" alt="verificador de link"></a>
         <a href="index.html"> <img src="image/casa.png" alt="home"></a>
