--- a/chatbot.html
+++ b/chatbot.html
@@ -9,11 +9,11 @@
     <h1>Chatbot</h1>
     <p id="chat-box"></p>
     <article>
-        <img src="" alt = "verificar foto">
+        <img src="image/camera.png" alt = "verificar foto">
     <article>
-        <img src="/" alt = "checar mensagens">
+        <img src="image/mensagens.png" alt = "checar mensagens">
     <article>
-        <img src="" alt = "mecanismo de proteção">
+        <img src="image/cadeado.png" alt = "mecanismo de proteção">
     <section>    
     <label for="user-input">Digite sua duvida:</label>
     <input type="text" id="user-input">
