--- a/chamadas/verificador_chamadas.html
+++ b/chamadas/verificador_chamadas.html
@@ -16,7 +16,7 @@
         <article>
             <h1>Está recebendo várias ligações? Digite o número!</h1>
             <img src="image/telefone.png" alt="telefone">
-            <input type="number" pattern="\d*" inputmode="numeric">
+            <input type="number" inputmode="numeric">
         </article>
         <article>
             <button>Informações <img src="" alt="simbolo-informações"></button>
@@ -30,7 +30,7 @@
             
         <article>
             <button>Contatos <img src="" alt="simbolo-pessoinha"></button>
-            <ul>Comparar com contatos salvos</ul>
+            <ul><li>Comparar com contatos salvos</li></ul>
         </article>
     </main>
 
@@ -41,6 +41,5 @@
         <a href="chatbot.html"> <img src="image/robo.png" alt="chatbot"></a>
         <a href="lojas.html"> <img src="image/casa.png" alt="loja"></a>
     </footer>
-
 </body>
 </html>
