imagens estão corretas ("../" significa que sai da pasta)

--- a/chamadas/verificador_chamadas.html
+++ b/chamadas/verificador_chamadas.html
@@ -8,23 +8,23 @@
 <body>
     <nav>
         <a href="index.html">
-            <img src="image/seta-esquerda.png" alt="seta-esquerda">
+            <img src="../image/seta-esquerda.png" alt="seta-esquerda">
         </a>
         <h1>Verifique Aqui!</h1>
     </nav>
     <main>
         <article>
             <h1>Está recebendo várias ligações? Digite o número!</h1>
-            <img src="image/telefone.png" alt="telefone">
+            <img src="../image/telefone.png" alt="telefone">
             <input type="number" inputmode="numeric">
         </article>
         <article>
-            <button>Informações <img src="" alt="simbolo-informações"></button>
+            <button>Informações <img src="../image/simbolo-de-informacao.png" alt="simbolo-informações"></button>
             <ul>Verifique mais Informações</ul>
         </article>
                 
         <article>
-            <button>Bloquear <img src="" alt="simbolo-cadeado"></button>
+            <button>Bloquear <img src="../image/cadeado.png" alt="simbolo-cadeado"></button>
             <ul>Números bloqueados</ul>
         </article>
             
@@ -35,11 +35,11 @@
     </main>
 
     <footer>
-        <a href="verificador_chamadas.html"> <img src="image/telefone.png" alt="telefone"></a>
-        <a href="verificador.html"> <img src="image/lupa.png" alt="verificador de link"></a>
-        <a href="index.html"> <img src="image/casa.png" alt="home"></a>
-        <a href="chatbot.html"> <img src="image/robo.png" alt="chatbot"></a>
-        <a href="lojas.html"> <img src="image/casa.png" alt="loja"></a>
+        <a href="../chamadas/verificador_chamadas.html"> <img src="../image/telefone.png" alt="telefone"></a>
+        <a href="../link/verificador.html"> <img src="../image/lupa.png" alt="verificador de link"></a>
+        <a href="../index.html"> <img src="../image/casa.png" alt="home"></a>
+        <a href="../chatbot/chatbot.html"> <img src="../image/robo.png" alt="chatbot"></a>
+        <a href="../lojas/lojas.html"> <img src="../image/casa.png" alt="loja"></a>
     </footer>
 </body>
 </html>
