--- a/lojas/lojas.html
+++ b/lojas/lojas.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <nav> <!-- Parte superior: indica o nome do app e a seta para voltar para a página anterior-->
-        <a href="index.html"> <!--volta para a pagina inicial (verificar o index.html)-->
-            <img src = "image/seta-esquerda.png" alt = "seta esquerda">
+        <a href="../index.html"> <!--volta para a pagina inicial (verificar o index.html)-->
+            <img src = "../image/seta-esquerda.png" alt = "seta esquerda">
             <p>Voltar</p>
         </a>
         <h2>Verifique Aqui</h2>
@@ -17,13 +17,13 @@
         <h2>Lojas da Semana</h2>
             <ul>
                 <li><a href = "https://www.amazon.com.br" target="_blank">
-                    <img src="image/amazon_logo.png" alt = "Amazon">
+                    <img src="../image/amazon_logo.png" alt = "Amazon">
                     <p>Amazon</p>                   
                     </a>
                 </li>
 
                 <li><a href = "https://www.olx.com.br" target="_blank">
-                    <img src="image/olx_logo.png" alt = "Olx">
+                    <img src="../image/olx_logo.png" alt = "Olx">
                     <p>Olx</p>                   
                     </a>
                 </li>
@@ -36,11 +36,11 @@
             </ul>
     </main>
     <footer> <!-- Rótulo final da página, como um sub menu-->
-        <a href="verificador_chamadas.html"> <img src="image/telefone.png" alt="telefone"></a>
-        <a href="verificador.html"> <img src="image/lupa.png" alt="verificador de link"></a>
-        <a href="index.html"> <img src="image/casa.png" alt="home"></a>
-        <a href="chatbot.html"> <img src="image/robo.png" alt="chatbot"></a>
-        <a href="lojas.html"> <img src="image/bolsa-de-compras.png" alt="loja"></a>
-    </footer>
+        <a href="../verificador_chamadas.html"> <img src="../image/telefone.png" alt="telefone"></a>
+        <a href="../verificador.html"> <img src="../image/lupa.png" alt="verificador de link"></a>
+        <a href="../index.html"> <img src="../image/casa.png" alt="home"></a>
+        <a href="../chatbot.html"> <img src="../image/robo.png" alt="chatbot"></a>
+        <a href="../lojas.html"> <img src="../image/bolsa-de-compras.png" alt="loja"></a>
+    </footer>
 </body>
 </html>
