imagens alteradas (fundo branco)

--- a/lojas/lojas.html
+++ b/lojas/lojas.html
@@ -17,20 +17,20 @@
         <h2>Lojas da Semana</h2>
             <ul>
                 <li><a href = "https://www.amazon.com.br" target="_blank">
-                    <img src="../image/amazon_logo.png" alt = "Amazon">
+                    <img src="../image/amazon-logo.png" alt = "Amazon">
                     <p>Amazon</p>                   
                     </a>
                 </li>
 
                 <li><a href = "https://www.olx.com.br" target="_blank">
-                    <img src="../image/olx_logo.png" alt = "Olx">
+                    <img src="../image/olx-logo.png" alt = "Olx">
                     <p>Olx</p>                   
                     </a>
                 </li>
 
                 <li><a href = "https://www.mercadolivre.com.br" target="_blank">
-                    <img src="image/mercado-livre.jpg" alt = "Mercado Livre">
-                    <p>Mercado Livre</p>                   
+                    <img src="../image/mercado-livre.png" alt = "Mercado Livre">
+                    <p>Mercado Livre</p>          s         
                     </a>
                 </li>
             </ul>
