--- a/chatbot/chatbot.html
+++ b/chatbot/chatbot.html
@@ -6,18 +6,39 @@
     <title>Chatbot Simples</title>
 </head>
 <body>
-    <h1>Chatbot</h1>
-    <p id="chat-box"></p>
-    <article>
-        <img src="../image/camera.png" alt = "verificar foto">
-    <article>
-        <img src="../image/mensagens.png" alt = "checar mensagens">
-    <article>
-        <img src="../image/cadeado.png" alt = "mecanismo de proteção">
-    <section>    
+    <nav>
+        <a href="index.html">
+            <img src="../image/seta-esquerda.png" alt="seta-esquerda">
+        </a>
+        <h1>Verifique Aqui!</h1>
+    </nav>
+        <main>
+            <article>
+                <h1>Chatbot</h1>
+            </article>
+        <article>
+            <button><img src="../image/camera.png" alt = "verificar foto"></button>
+            <ul>Verificar foto</ul>
+        </article>
+        <article>
+            <button><img src="../image/mensagens.png" alt = "checar mensagens"></button>
+            <ul>Checar mensagens</ul>
+        </article>
+        <article>
+            <button><img src="../image/cadeado.png" alt = "mecanismos de proteção"></button>
+            <ul>Mecanismos de proteção</ul>
+        </article>
+        </main>    
     <label for="user-input">Digite sua duvida:</label>
     <input type="text" id="user-input">
-    <button onclick="sendMessage()">Enviar</button>
+    <button>Enviar</button>
 
+    <footer>
+        <a href="../chamadas/verificador_chamadas.html"> <img src="../image/telefone.png" alt="telefone"></a>
+        <a href="../link/verificador.html"> <img src="../image/lupa.png" alt="verificador de link"></a>
+        <a href="../index.html"> <img src="../image/casa.png" alt="home"></a>
+        <a href="../chatbot/chatbot.html"> <img src="../image/robo.png" alt="chatbot"></a>
+        <a href="../lojas/lojas.html"> <img src="../image/bolsa-de-compras.png" alt="loja"></a>
+    </footer>
 </body>
 </html>
