--- a/chatbot/chatbot.html
+++ b/chatbot/chatbot.html
@@ -6,16 +6,17 @@
     <title>Chatbot Simples</title>
 </head>
 <body>
-    <nav>
-        <a href="index.html">
-            <img src="../image/seta-esquerda.png" alt="seta-esquerda">
+    <nav> <!-- Parte superior: indica o nome do app e a seta para voltar para a página anterior-->
+        <a href="../index.html"> <!--volta para a pagina inicial (verificar o index.html)-->
+            <img src = "../image/seta-esquerda.png" alt = "seta esquerda">
+            <p>Voltar</p>
         </a>
         <h1>Verifique Aqui!</h1>
     </nav>
-        <main>
-            <article>
-                <h1>Chatbot</h1>
-            </article>
+    <main>
+        <article>
+            <h1>Chatbot</h1>
+        </article>
         <article>
             <button><img src="../image/camera.png" alt = "verificar foto"></button>
             <ul>Verificar foto</ul>
@@ -28,7 +29,7 @@
             <button><img src="../image/cadeado.png" alt = "mecanismos de proteção"></button>
             <ul>Mecanismos de proteção</ul>
         </article>
-        </main>    
+    </main>    
     <label for="user-input">Digite sua duvida:</label>
     <input type="text" id="user-input">
     <button>Enviar</button>
