casos extras feito

--- a/chamadas/verificador_chamadas_3.html
+++ b/chamadas/verificador_chamadas_3.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">
+        <a href="../index.html">
             <img src="../image/seta-esquerda.png" alt="seta-esquerda">
         </a>
         <h1>Verifique Aqui!</h1>
