--- a/chamadas/verificador_chamada_2.html
+++ b/chamadas/verificador_chamada_2.html
@@ -8,7 +8,7 @@
 
 <body>
     <nav>
-        <a href="index.html">
+        <a href="../index.html">
             <img src="../image/seta-esquerda.png" alt="seta-esquerda">
         </a>
         <h1>Verifique Aqui!</h1>
