corriji com o validador w3

--- a/chamadas/verificador_chamada_2.html
+++ b/chamadas/verificador_chamada_2.html
@@ -13,33 +13,36 @@
         </a>
         <h1>Verifique Aqui!</h1>
     </nav>
-        <img src="../image/telefone.png" alt="telefone">
-        <h1>(99) 99999-9999</h1>
-            <article>
-                <ul>
-                    <li>
-                        <p>Estado:      </p>
-                    </li>
-                    <li>
-                        <p>Contado:     </p>
-                    </li>
-                    <li>
-                        <p>Ligações:    </p>
-                    </li>
-                    <li>
-                        <p>Empresa:     </p>
-                    </li>
-                    <li>
-                        <a href="verificador_chamadas_3.html">
-                            <img src="../image/cadeado.png" alt="Cadeado" width="20" height="20">
-                            Bloquear
-                        </a>
-                    </li>
-                </ul>
-            </article>
-        
+    <img src="../image/telefone.png" alt="telefone">
+    <h2>(99) 99999-9999</h2>
+    <article>
+        <h2>Detalhes do Número</h2>
+        <ul>
+            <li>
+                <p>Estado:      </p>
+            </li>
+            <li>
+                <p>Contato:     </p>
+            </li>
+            <li>
+                <p>Ligações:    </p>
+            </li>
+            <li>
+                <p>Empresa:     </p>
+            </li>
+            <li>
+                <a href="verificador_chamadas_3.html">
+                    <img src="../image/cadeado.png" alt="Cadeado" width="20" height="20">
+                    Bloquear
+                </a>
+            </li>
+        </ul>
+    </article>
+    
     <main>
-        <a href="verificador_chamadas.html"> Informações</a>
+        <a href="verificador_chamadas.html">
+            <img src="../image/simbolo-de-informacao.png" alt="">
+        </a>
         <a href="#"> 
             <img src="../image/cadeado.png" alt="cadeado">
         </a>
