--- a/chamadas/verificador_chamadas_3.html
+++ b/chamadas/verificador_chamadas_3.html
@@ -18,11 +18,10 @@
         <h3>Bloqueado com sucesso!</h3>
 
         <article>
-            <h1>Verifique outro número!</h1>
+            <h2>Verifique outro número!</h2>
             <img src="../image/telefone.png" alt="telefone">
-            <input type="number" inputmode="numeric">
+            <input type="number">
         </article>
-
     </main>
     <footer>
         <a href="../chamadas/verificador_chamadas.html"> <img src="../image/telefone.png" alt="telefone"></a>
