--- a/casos_extras/pagamentos.html
+++ b/casos_extras/pagamentos.html
@@ -15,23 +15,22 @@
     <main>
         <h1>Aumente sua segurança!</h1>
         <article>
-            <p>
-                <ul>
-                    <li>Verifica PIX</li>
-                    <li>Alerta sobre números suspeitos</li>
-                    <li>ChatBot personalizado</li>
-                </ul>
-                Premium
-                <ul>
-                    <li>chatbot</li>
-                    <li>lojas confiaveis</li>
-                    <li>Fiscalizador de chamadas</li>
-                </ul>
-                Free
-            </p>
+            <h2>Recursos Disponíveis</h2>
+            <ul>
+                <li>Verifica PIX</li>
+                <li>Alerta sobre números suspeitos</li>
+                <li>ChatBot personalizado</li>
+            </ul>
+            <h3>Premium</h3>
+            <ul>
+                <li>Chatbot</li>
+                <li>Lojas confiáveis</li>
+                <li>Fiscalizador de chamadas</li>
+            </ul>
+            <h3>Free</h3>
         </article>
         <a href="Leis_de_proteção.html">
-            <h1>Leis de proteção de Dados</h1>
+            <h2>Leis de proteção de Dados</h2>
         </a>
     </main>
     <footer>
