Verificador de links final

--- a/link/verificador_links2.html
+++ b/link/verificador_links2.html
@@ -8,7 +8,7 @@
 
 <body>
     <nav>
-        <a href="../index.html">
+        <a href="verificador.html">
             <img src = "../image/seta-esquerda.png" alt = "seta esquerda">
             <p>Voltar</p>
         </a>
@@ -16,10 +16,29 @@
     </nav>
     <label for="user-input">Insira o URL aqui:</label>
     <input type="text" id="user-input">
-    <a href="verificador_links2.html">
-        <button>Checar</button>
-    </a>
-    <p>Verificamos a confiabilidade do site e suas experiências com os clientes!</p>
+    <button>Cheque de novo</button>
+    <article>
+        <h2>Detalhes do site</h2>
+        <ul>
+            <li>
+                <p>Empresa:      </p>
+            </li>
+            <li>
+                <p>Categoria:     </p>
+            </li>
+            <li>
+                <p>Avaliação Reclame Aqui:    </p>
+            </li>
+            <li>
+                <p>Denúncias:     </p>
+            </li>
+            <li>
+                <a href="verificador_links3.html">
+                    <button>Mais informações +</button>
+                </a>
+            </li>
+    </article>
+
 
 <footer>
     <a href="../verificador_chamadas.html"> <img src="../image/telefone.png" alt="telefone"></a>
