--- a/link/verificador_links3.html
+++ b/link/verificador_links3.html
@@ -8,18 +8,42 @@
 
 <body>
     <nav>
-        <a href="../index.html">
+        <a href="verificador_links2.html">
             <img src = "../image/seta-esquerda.png" alt = "seta esquerda">
             <p>Voltar</p>
         </a>
         <h2>Verifique Aqui</h2>
     </nav>
-    <label for="user-input">Insira o URL aqui:</label>
-    <input type="text" id="user-input">
-    <a href="verificador_links2.html">
-        <button>Checar</button>
-    </a>
-    <p>Verificamos a confiabilidade do site e suas experiências com os clientes!</p>
+    <p>Mais informações</p>
+    <article>
+        <h2>Reclame Aqui</h2>
+        <ul>
+            <li>
+                Durão: Esse site é Incrível!
+            </li>
+            <li>
+                Maria Alice: Esse site é terrível!
+            </li>
+            <li>
+                Nota:
+            </li>
+        <h2>Verifique Aqui</h2>
+        <ul>
+            <li>
+                Comentários Positivos:
+            </li>
+            <li>
+                Comentários Negativos:
+            </li>
+            <li>
+                Servíços incompletos:
+            </li>
+        </ul>
+         
+        
+    </article>
+
+
 
 <footer>
     <a href="../verificador_chamadas.html"> <img src="../image/telefone.png" alt="telefone"></a>
