--- a/chatbot/chatbot.html
+++ b/chatbot/chatbot.html
@@ -15,19 +15,20 @@
     </nav>
     <main>
         <article>
-            <h1>Chatbot</h1>
+            <h2>Chatbot</h2>
         </article>
         <article>
+            <h2>Verificar foto</h2>
             <button><img src="../image/camera.png" alt = "verificar foto"></button>
-            <ul>Verificar foto</ul>
         </article>
         <article>
+            <h2>Checar mensagens</h2>
             <button><img src="../image/mensagens.png" alt = "checar mensagens"></button>
-            <ul>Checar mensagens</ul>
         </article>
         <article>
+            <h2>Mecanismos de proteção</h2>
             <button><img src="../image/cadeado.png" alt = "mecanismos de proteção"></button>
-            <ul>Mecanismos de proteção</ul>
+
         </article>
     </main>    
     <label for="user-input">Digite sua duvida:</label>
