--- a/index.html
+++ b/index.html
@@ -5,7 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verifique Aqui!</title>
 </head>
+
 <body>
-    
+    <main>
+        <a href="../perfil.html"> <img src="image/persona.jpeg" alt="foto do usuário"></a>
+       <!-- Perfil ainda não criado-->
+        <h1>Bem vinda Maria!</h1>
+        <h2>Lojas da Semana</h2>
+            <ul>
+                <li><a href = "https://www.amazon.com.br" target="_blank">
+                    <img src="image/amazon-logo.png" alt = "Amazon">
+                    <p>Amazon</p>                   
+                    </a>
+                </li>
+
+                <li><a href = "https://www.olx.com.br" target="_blank">
+                    <img src="image/olx-logo.png" alt = "Olx">
+                    <p>Olx</p>                   
+                    </a>
+                </li>
+
+                <li><a href = "https://www.cea.com.br/" target="_blank">
+                    <img src="image/cea_logo.png" alt = "cea">
+                    <p>CeA</p>                   
+                    </a>
+                </li>
+            </ul>
+        <a href="medidas_de_segurança.html">
+            Medidas de segurança
+    </main>
+    <footer> <!-- Rótulo final da página, como um sub menu-->
+        <a href="chamadas/verificador_chamadas_3.html"> <img src="image/telefone.png" alt="telefone"></a>
+        <a href="verificador.html"> <img src="image/lupa.png" alt="verificador de link"></a>
+        <a href="index.html"> <img src="image/casa.png" alt="home"></a>
+        <a href="chatbot/chatbot.html"> <img src="image/robo.png" alt="chatbot"></a>
+        <a href="lojas/"> <img src="image/bolsa-de-compras.png" alt="loja"></a>
+    </footer>
 </body>
+
+
 </html>
