--- a/verificador.html
+++ b/verificador.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
-<html lang = 'pt-br'>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verificador de Links</title>
-
-
 </head>
 <body>
-<div class='container'>
-    <div class='header'>Verifique Aqui</div>
-    <input type = 'text' class = 'input-box' placeholder="Verifique o Link">
-    <button class = 'link-button'>Verifique Aqui</button>
-    <div class="info-box">
-        Verificamos a confiabilidade do site e suas experiências com os clientes
-    </div>
-    <div class="footer">
-        <div> Ligações</div>
-        <div> Verificador </div>
-        <div> Home</div>
-        <div> Lojas</div>
-    </div>
-</div>
+    <main>
+        <header>
+            <h1>Verifique Aqui</h1>
+        </header>
+        <section>
+            <input type="text" placeholder="Verifique o Link">
+            <button>Verifique Aqui</button>
+        </section>
+        <aside>
+            <p>Verificamos a confiabilidade do site e suas experiências com os clientes</p>
+        </aside>
+        <footer>
+            <nav>
+                <ul>
+                    <li><a href="#">Ligações</a></li>
+                    <li><a href="#">Verificador</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Lojas</a></li>
+                </ul>
+            </nav>
+        </footer>
+    </main>
 </body>
 </html>
