--- a/lojas/lojas.html
+++ b/lojas/lojas.html
@@ -36,11 +36,11 @@
             </ul>
     </main>
     <footer> <!-- Rótulo final da página, como um sub menu-->
-        <a href="../verificador_chamadas.html"> <img src="../image/telefone.png" alt="telefone"></a>
-        <a href="../verificador.html"> <img src="../image/lupa.png" alt="verificador de link"></a>
+        <a href="../chamadas/verificador_chamadas_3.html"> <img src="../image/telefone.png" alt="telefone"></a>
+        <a href="../verificador/verificador.html"> <img src="../image/lupa.png" alt="verificador de link"></a>
         <a href="../index.html"> <img src="../image/casa.png" alt="home"></a>
-        <a href="../chatbot.html"> <img src="../image/robo.png" alt="chatbot"></a>
-        <a href="../lojas.html"> <img src="../image/bolsa-de-compras.png" alt="loja"></a>
+        <a href="../chatbot/chatbot.html"> <img src="../image/robo.png" alt="chatbot"></a>
+        <a href="../lojas/lojas.html"> <img src="../image/bolsa-de-compras.png" alt="loja"></a>
     </footer>
 </body>
 </html>
