--- a/verificador/verificador.html
+++ b/verificador/verificador.html
@@ -17,15 +17,12 @@
         <aside>
             <p>Verificamos a confiabilidade do site e suas experiências com os clientes</p>
         </aside>
-        <footer>
-            <nav>
-                <ul>
-                    <li><a href="#">Ligações</a></li>
-                    <li><a href="#">Verificador</a></li>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Lojas</a></li>
-                </ul>
-            </nav>
+        <footer> <!-- Rótulo final da página, como um sub menu-->
+            <a href="../chamadas/verificador_chamadas_3.html"> <img src="../image/telefone.png" alt="telefone"></a>
+            <a href="../verificador/verificador.html"> <img src="../image/lupa.png" alt="verificador de link"></a>
+            <a href="../index.html"> <img src="../image/casa.png" alt="home"></a>
+            <a href="../chatbot/chatbot.html"> <img src="../image/robo.png" alt="chatbot"></a>
+            <a href="../lojas/lojas.html"> <img src="../image/bolsa-de-compras.png" alt="loja"></a>
         </footer>
     </main>
 </body>
