inicio css index

--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verifique Aqui!</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
+    <header>
+        <h1>Verifique Aqui!</h1>
+    </header>
+
     <main>
+        <article class="perfil">
         <a href="../perfil.html"> <img src="image/persona.jpeg" alt="foto do usuário"></a>
        <!-- Perfil ainda não criado-->
         <h1>Bem vinda Maria!</h1>
+        </article>
+        
         <h2>Lojas da Semana</h2>
             <ul>
                 <li><a href = "https://www.amazon.com.br" target="_blank">
@@ -31,8 +40,7 @@
                     </a>
                 </li>
             </ul>
-        <a href="medidas_de_segurança.html">
-            Medidas de segurança
+        <a href="medidas_de_segurança.html">Medidas de segurança</a>                
     </main>
     <footer> <!-- Rótulo final da página, como um sub menu-->
         <a href="chamadas/verificador_chamadas_3.html"> <img src="image/telefone.png" alt="telefone"></a>
