index_melhorar imagens

--- a/index.html
+++ b/index.html
@@ -3,44 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Verifique Aqui!</title>
+    <title>Verifique Aqui</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
     <header>
-        <h1>Verifique Aqui!</h1>
+        <h1>Verifique Aqui</h1>
     </header>
 
     <main>
         <article class="perfil">
         <a href="../perfil.html"> <img src="image/persona.jpeg" alt="foto do usuário"></a>
        <!-- Perfil ainda não criado-->
-        <h1>Bem vinda Maria!</h1>
+        <h1>Bem vinda Maria</h1>
         </article>
         
+        <article class="lojas">
         <h2>Lojas da Semana</h2>
             <ul>
                 <li><a href = "https://www.amazon.com.br" target="_blank">
-                    <img src="image/amazon-logo.png" alt = "Amazon">
-                    <p>Amazon</p>                   
+                    <img src="image/amazon-logo.png" alt = "Amazon">                 
                     </a>
                 </li>
 
                 <li><a href = "https://www.olx.com.br" target="_blank">
-                    <img src="image/olx-logo.png" alt = "Olx">
-                    <p>Olx</p>                   
+                    <img src="image/olx-logo.png" alt = "Olx">                  
                     </a>
                 </li>
 
                 <li><a href = "https://www.cea.com.br/" target="_blank">
-                    <img src="image/cea_logo.png" alt = "cea">
-                    <p>CeA</p>                   
+                    <img src="image/cea_logo.png" alt = "cea">                
                     </a>
                 </li>
             </ul>
-        <a href="medidas_de_segurança.html">Medidas de segurança</a>                
+        </article>
+
+        <a href="medidas_de_segurança.html">
+            <button class="btn">Medidas de Segurança</button>
+        </a>
+          
     </main>
     <footer> <!-- Rótulo final da página, como um sub menu-->
         <a href="chamadas/verificador_chamadas_3.html"> <img src="image/telefone.png" alt="telefone"></a>
