--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main>
         <article class="perfil">
-        <a href="../perfil.html"> <img src="image/persona.jpeg" alt="foto do usuário"></a>
+        <a href="../perfil.html"> <img src="image/pessoa.jpg" alt="foto do usuário"></a>
        <!-- Perfil ainda não criado-->
         <h1>Bem vinda Maria</h1>
         </article>
