--- a/lojas/lojas.html
+++ b/lojas/lojas.html
@@ -29,25 +29,25 @@
                 <ul class="reclame">
                 
                 <li>
-                    <p>Carlos</p>
+                    <p>Carlos:</p>
                     <p class="comentario"> "Que site incrível!"</p>
                     <a img src="../image/pessoa.jpg" alt="estrela"></a>
                 </li> 
 
                 <li>
-                    <p>Fernanda</p>
+                    <p>Fernanda:</p>
                     <p class="comentario"> "Amei a usabilidade do site da Amazon!"</p>
                     <a img src="../image/pessoa.jpg" alt="estrela"></a>
                 </li> 
 
                 <li>
-                    <p>Fernanda</p>
+                    <p>Luiz:</p>
                     <p class="comentario"> "Comprei e chegou em três dias."</p>
                     <a img src="../image/pessoa.jpg" alt="estrela"></a>
                 </li> 
 
                 <li class="nota">
-                    <p>Nota</p>
+                    <p>Nota:</p>
                     <p class="estrela">⭐⭐⭐</p>
                 </li>
                 </ul>
