pagamentos-caso extra

--- a/casos_extras/pagamentos.html
+++ b/casos_extras/pagamentos.html
@@ -3,39 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/pagamentos.css">
     <title>Verifique Aqui!</title>
 </head>
 <body>
-    <nav>
+    <header>
         <a href="../index.html">
             <img src="../image/seta-esquerda.png" alt="seta-esquerda">
         </a>
-        <h1>Verifique Aqui!</h1>
-    </nav>
+        <h1>Verifique Aqui</h1>
+    </header>
     <main>
-        <h1>Aumente sua segurança!</h1>
-        <article>
-            <h2>Recursos Disponíveis</h2>
-            <ul>
-                <li>Verifica PIX</li>
-                <li>Alerta sobre números suspeitos</li>
-                <li>ChatBot personalizado</li>
-            </ul>
-            <h3>Premium</h3>
-            <ul>
-                <li>Chatbot</li>
-                <li>Lojas confiáveis</li>
-                <li>Fiscalizador de chamadas</li>
-            </ul>
-            <h3>Free</h3>
+        <h1>Aumente sua segurança</h1>
+        <article class="corpo">
+            <div class="bloco">
+                <h2>Plano Premium</h2>
+                <ul class="premium">
+                    <li>Chatbot</li>
+                    <li>Lojas confiáveis</li>
+                    <li>Fiscalizador de chamadas</li>
+                </ul>
+            </div>
+            
+            <div class="bloco">
+                <h2>Plano Free</h2>
+                <ul class ="free">
+                    <li>Verifica PIX</li>
+                    <li>Alerta sobre números suspeitos</li>
+                    <li>Chatbot personalizado</li>
+                </ul>
+            </div>
+            
         </article>
-        <a href="Leis_de_proteção.html">
+        <a href="leis_de_proteção.html">
             <h2>Leis de proteção de Dados</h2>
         </a>
     </main>
-    <footer> <!-- Rótulo final da página, como um sub menu-->
-        <a href="../chamadas/verificador_chamadas_3.html"> <img src="../image/telefone.png" alt="telefone"></a>
-        <a href="../verificador/verificador.html"> <img src="../image/lupa.png" alt="verificador de link"></a>
+    <footer>
+        <a href="../chamadas/verificador_chamadas.html"> <img src="../image/telefone.png" alt="telefone"></a>
+        <a href="../link/verificador.html"> <img src="../image/lupa.png" alt="verificador de link"></a>
         <a href="../index.html"> <img src="../image/casa.png" alt="home"></a>
         <a href="../chatbot/chatbot.html"> <img src="../image/robo.png" alt="chatbot"></a>
         <a href="../lojas/lojas.html"> <img src="../image/bolsa-de-compras.png" alt="loja"></a>
