--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             </ul>
         </article>
 
-        <a href="medidas_de_segurança.html">
-            <button class="btn">Medidas de Segurança</button>
+        <a href="casos_extras/pagamentos.html">
+            <button class="btn">Mais informações</button>
         </a>
           
     </main>
