images index alteradas

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
         <article class="lojas">
         <h2>Lojas da Semana</h2>
             <ul>
-                <li><a href = "https://www.amazon.com.br" target="_blank">
+                <li class="amazon"><a href = "https://www.amazon.com.br" target="_blank">
                     <img src="image/amazon-logo.png" alt = "Amazon">                 
                     </a>
                 </li>
 
-                <li><a href = "https://www.olx.com.br" target="_blank">
+                <li class="olx"><a href = "https://www.olx.com.br" target="_blank">
                     <img src="image/olx-logo.png" alt = "Olx">                  
                     </a>
                 </li>
 
-                <li><a href = "https://www.cea.com.br/" target="_blank">
+                <li class="cea"><a href = "https://www.cea.com.br/" target="_blank">
                     <img src="image/cea_logo.png" alt = "cea">                
                     </a>
                 </li>
