--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <main>
         <article class="perfil">
         <a href="../perfil.html"> <img src="image/pessoa.jpg" alt="foto do usuário"></a>
-       <!-- Perfil ainda não criado-->
-        <h1>Bem vinda Maria</h1>
+        <h1>Bem vinda Persona</h1>
         </article>
         
         <article class="lojas">
