leis de proteção

--- a/casos_extras/leis_de_proteção.html
+++ b/casos_extras/leis_de_proteção.html
@@ -3,29 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Verifique Aqui!</title>
+    <title>Verifique Aqui</title>
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/leis.css">
 </head>
 <body>
-    <nav>
+    <header>
         <a href="../index.html">
             <img src="../image/seta-esquerda.png" alt="seta-esquerda">
         </a>
         <h1>Verifique Aqui!</h1>
-    </nav>
+    </header>
     <main>
-        <h1>Leis de proteção</h1>
+        <div class="leis">Leis de proteção</div>
         <article>
-            <ul>
-                <li>
+            <ul class="linhas">
+                <li class="quadrados">
                     <a href="https://www.gov.br/esporte/pt-br/acesso-a-informacao/lgpd" target="_blank">Legislação Brasileira</a>
                 </li>
-                <li>
+                <li class="quadrados">
                     <a href="">Práticas seguras</a>
                 </li>
-                <li>
+            </ul>
+            <ul class="linhas">
+                <li class="quadrados">
                     <a href="">Caiu em golpe?</a>
                 </li>
-                <li>
+                <li class="quadrados">
                     <a href="">Fique por dentro de novas tendências de golpe</a>
                 </li>
             </ul>
