--- a/chatbot/chatbot3.html
+++ b/chatbot/chatbot3.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header> 
-        <a href="../index.html"> 
+        <a href="../chatbot/chatbot2.html"> 
             <img src = "../image/seta-esquerda.png" alt = "seta esquerda">
         </a>
         <h2>Verifique Aqui</h2>
@@ -18,29 +18,20 @@
         <p class="chat-bubble">Olá, Maria!</div>
         <p class="chat-bubble">Como podemos te ajudar hoje?</div>
         
-        <div class="options">
-            <a href="" class="escolha">
-                <img src="../image/camera.png" alt = "verificar foto">
-                <h2>Verificar foto</h2>
-            </a>
-            <a href="chatbot2.html" class="escolha">
-                <img src="../image/mensagens.png" alt = "checar mensagens">
-                <h2>Checar mensagens</h2>
-            </a>
-            <a href="" class="escolha">
-                <img src="../image/cadeado.png" alt = "mecanismos de proteção">
-                <h2>Mecanismos de proteção</h2>
-            </a>
-        </div>
-
-
+        <p class="user_bubble">*Mensagem do usuário*</p>
+        <p class="chat-bubble">Alerta!⚠️</p>
+        <p class="chat-bubble">Mensagem Apelativa!
+            Confira todos os detalhes antes de prosseguir;
+        </p>
+        <p class="user_bubble">Whatsapp conectado</p>
+        <p class="chat-bubble">Agora você pode consultar e enviar mensagens diretamente de seu Whatsapp!</p>
     </main>    
     <div class="chat">
         <input type="text" placeholder="Digite aqui...">
         <button>Enviar</button>
     </div>
 
-    <footer> <!-- Rótulo final da página, como um sub menu-->
+    <footer>
         <a href="../chamadas/verificador_chamadas.html"> <img src="../image/telefone.png" alt="telefone"></a>
         <a href="../verificador/verificador.html"> <img src="../image/lupa.png" alt="verificador de link"></a>
         <a href="../index.html"> <img src="../image/casa.png" alt="home"></a>
