--- a/chatbot/chatbot3.html
+++ b/chatbot/chatbot3.html
@@ -15,7 +15,7 @@
         <h2>Verifique Aqui</h2>
     </header >
     <main>
-        <p class="chat-bubble">Olá, Maria!</div>
+        <p class="chat-bubble">Olá, Persona!</div>
         <p class="chat-bubble">Como podemos te ajudar hoje?</div>
         
         <p class="user_bubble">*Mensagem do usuário*</p>
