--- a/casos_extras/leis_de_proteção.html
+++ b/casos_extras/leis_de_proteção.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <div class="leis">Leis de proteção</div>
-        <article>
+        <div>
             <ul class="linhas">
                 <li class="quadrados">
                     <a href="https://www.gov.br/esporte/pt-br/acesso-a-informacao/lgpd" target="_blank">Legislação Brasileira</a>
@@ -33,7 +33,7 @@
                     <a href="">Fique por dentro de novas tendências de golpe</a>
                 </li>
             </ul>
-        </article>
+        </div>
 
         <footer> <!-- Rótulo final da página, como um sub menu-->
             <a href="../chamadas/verificador_chamadas_3.html"> <img src="../image/telefone.png" alt="telefone"></a>
