--- a/chatbot/chatbot3.html
+++ b/chatbot/chatbot3.html
@@ -15,8 +15,8 @@
         <h2>Verifique Aqui</h2>
     </header >
     <main>
-        <p class="chat-bubble">Olá, Persona!</div>
-        <p class="chat-bubble">Como podemos te ajudar hoje?</div>
+        <p class="chat-bubble">Olá, Persona!</p>
+        <p class="chat-bubble">Como podemos te ajudar hoje?</p>
         
         <p class="user_bubble">*Mensagem do usuário*</p>
         <p class="chat-bubble">Alerta!⚠️</p>
