--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <article class="perfil">
         <a href="../perfil.html"> <img src="image/pessoa.jpg" alt="foto do usuário"></a>
-        <h1>Bem vinda Persona</h1>
+        <h2>Bem vinda Persona</h2>
         </article>
         
         <article class="lojas">
@@ -39,9 +39,8 @@
             </ul>
         </article>
 
-        <a href="casos_extras/pagamentos.html">
-            <button class="btn">Mais informações</button>
-        </a>
+        <a href="casos_extras/pagamentos.html" class="btn">Mais informações</a>
+
           
     </main>
     <footer> <!-- Rótulo final da página, como um sub menu-->
